utilized routerLink and routerLinkActive to navigate between pages and add active styling

--- a/todo/src/app/header/header.component.html
+++ b/todo/src/app/header/header.component.html
@@ -1,4 +1,10 @@
 <nav>
-  <a routerLink="/">Welcome</a>
-  <a routerLink="/list">List</a>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/" routerLinkActive="active">Welcome</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/list" routerLinkActive="active">List</a>
+    </li>
+  </ul>
 </nav>
