--- a/todo/src/app/header/header.component.html
+++ b/todo/src/app/header/header.component.html
@@ -1,7 +1,13 @@
 <nav>
   <ul class="nav nav-pills">
     <li class="nav-item">
-      <a class="nav-link" routerLink="/" routerLinkActive="active">Welcome</a>
+      <a
+        class="nav-link"
+        routerLink="/"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >Welcome</a
+      >
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/list" routerLinkActive="active">List</a>
