styled the header and added notes

--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,2 +1,7 @@
+<!-- START NAVIGATION -->
 <app-header></app-header>
+<!-- END NAVIGATION -->
+
+<!-- START APP CONTENT -->
 <router-outlet></router-outlet>
+<!-- END APP CONTENT -->
