--- a/todo/src/app/header/header.component.html
+++ b/todo/src/app/header/header.component.html
@@ -1,16 +1,33 @@
-<nav>
-  <ul class="nav nav-pills">
-    <li class="nav-item">
-      <a
-        class="nav-link"
-        routerLink="/"
-        routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }"
-        >Welcome</a
-      >
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/list" routerLinkActive="active">List</a>
-    </li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img
+        src="https://getbootstrap.com//docs/5.1/assets/brand/bootstrap-logo.svg"
+        alt="ToDo App"
+        width="30"
+        height="24"
+      />
+    </a>
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          routerLink="/"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >Welcome</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/list" routerLinkActive="active"
+          >List</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/about" routerLinkActive="active"
+          >About</a
+        >
+      </li>
+    </ul>
+  </div>
 </nav>
