added new methods inside of the list service

--- a/todo/src/app/list/list.component.html
+++ b/todo/src/app/list/list.component.html
@@ -8,3 +8,10 @@
     </ul>
   </div>
 </div>
+
+<button
+  class="btn btn-primary"
+  (click)="onAddTask({ id: 123, taskName: 'peter', dueDate: '12/12/2022' })"
+>
+  Add Task
+</button>
