created and implemented an onCompleteTask() method inside of the list service

--- a/todo/src/app/list/list.component.html
+++ b/todo/src/app/list/list.component.html
@@ -15,3 +15,9 @@
 >
   Add Task
 </button>
+<button
+  class="btn btn-primary"
+  (click)="onCompleteTask({ id: 1, taskName: 'test 1', dueDate: '11/25/2022' })"
+>
+  Complete Task
+</button>
