created a task-item component and passed task data via *ngFor and binding to it from its parent component

--- a/todo/src/app/taskList/taskList.component.html
+++ b/todo/src/app/taskList/taskList.component.html
@@ -1,11 +1,6 @@
 <div class="card container">
   <div class="card-body">
-    <ul>
-      <li *ngFor="let task of taskList">
-        <h5>{{ task.taskName }}</h5>
-        <p>Due Date: {{ task.dueDate }}</p>
-      </li>
-    </ul>
+    <app-task-item [task]="task" *ngFor="let task of taskList"></app-task-item>
   </div>
 </div>
 
