--- a/todo/src/app/taskList/taskList.component.html
+++ b/todo/src/app/taskList/taskList.component.html
@@ -1,15 +1,18 @@
 <div class="card container">
   <div class="card-body">
+    <!-- taskForm is an object that contains the form data that gets passed to the onAddTask() method for object manipulation. It is then passed to the taskList service. -->
+    <form #taskForm="ngForm" (ngSubmit)="onAddTask(taskForm)">
+      <div class="form-group">
+        <input type="text" placeholder="task name" name="taskName" ngModel />
+        <input type="text" placeholder="due date" name="dueDate" ngModel />
+      </div>
+
+      <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
     <app-task-item [task]="task" *ngFor="let task of taskList"></app-task-item>
   </div>
 </div>
 
-<button
-  class="btn btn-primary"
-  (click)="onAddTask({ id: 1, taskName: 'peter', dueDate: '12/12/2022' })"
->
-  Add Task
-</button>
 <button
   class="btn btn-primary"
   (click)="onCompleteTask({ id: 1, taskName: 'test 1', dueDate: '11/25/2022' })"
