utilized EventEmitter to pass data in-between components - added complete task functionality

--- a/todo/src/app/taskList/task-item/task-item.component.html
+++ b/todo/src/app/taskList/task-item/task-item.component.html
@@ -2,5 +2,6 @@
   <li>
     <h5>{{ task.taskName }}</h5>
     <p>Due Date: {{ task.dueDate }}</p>
+    <button class="btn btn-primary" (click)="onComplete(task)">Complete</button>
   </li>
 </ul>
