--- a/todo/src/app/header/header.component.html
+++ b/todo/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" routerLink="/">
       <img
         src="https://getbootstrap.com//docs/5.1/assets/brand/bootstrap-logo.svg"
         alt="ToDo App"
